kubernetes/apps/kube-system/envoy-gateway/gateways/external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  labels:
    type: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname direct.${D_HS}
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.42.130
  listeners:
    - &http
      # ===== HS =====
      name: http-hs-apex
      protocol: HTTP
      port: 80
      hostname: &hs_apex "${D_HS}"
      allowedRoutes:
        namespaces:
          from: Same

    - <<: *http
      name: http-hs
      hostname: &hs "*.${D_HS}"

    - &https
      name: https-hs-apex
      protocol: HTTPS
      port: 443
      hostname: *hs_apex
      allowedRoutes:
        namespaces:
          from: All
      tls: &tls_hs
        certificateRefs:
          - kind: Secret
            name: ${D_HS//./-}-tls

    - <<: *https
      name: https-hs
      hostname: *hs
      tls: *tls_hs

    # ===== HCA =====
    - <<: *http
      name: http-hca-apex
      hostname: &hca_apex "${D_HCA}"

    - <<: *http
      name: http-hca
      hostname: &hca "*.${D_HCA}"

    - <<: *https
      name: https-hca-apex
      hostname: *hca_apex
      tls: &tls_hca
        certificateRefs:
          - kind: Secret
            name: ${D_HCA//./-}-tls

    - <<: *https
      name: https-hca
      hostname: *hca
      tls: *tls_hca

    # ===== IGI =====
    - <<: *http
      name: http-igi-apex
      hostname: &igi_apex "${D_IGI}"

    - <<: *http
      name: http-igi
      hostname: &igi "*.${D_IGI}"

    - <<: *https
      name: https-igi-apex
      hostname: *igi_apex
      tls: &tls_igi
        certificateRefs:
          - kind: Secret
            name: ${D_IGI//./-}-tls

    - <<: *https
      name: https-igi
      hostname: *igi
      tls: *tls_igi

    # ===== LMVCA =====
    - <<: *http
      name: http-lmvca-apex
      hostname: &lmvca_apex "${D_LMVCA}"

    - <<: *http
      name: http-lmvca
      hostname: &lmvca "*.${D_LMVCA}"

    - <<: *https
      name: https-lmvca-apex
      hostname: *lmvca_apex
      tls: &tls_lmvca
        certificateRefs:
          - kind: Secret
            name: ${D_LMVCA//./-}-tls

    - <<: *https
      name: https-lmvca
      hostname: *lmvca
      tls: *tls_lmvca
