kubernetes/apps/kube-system/envoy-gateway/gateways/internal.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  labels:
    type: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.${D_HS}
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.42.120
  listeners:
    - &http
      # ===== HS =====
      name: http-hs-apex
      protocol: HTTP
      port: 80
      hostname: &hs_apex "${D_HS}"
      allowedRoutes:
        namespaces:
          from: Same

    - <<: *http
      name: http-hs
      hostname: &hs "*.${D_HS}"

    - &https
      name: https-hs-apex
      protocol: HTTPS
      port: 443
      hostname: *hs_apex
      allowedRoutes:
        namespaces:
          from: All
      tls: &tls_hs
        certificateRefs:
          - kind: Secret
            name: ${D_HS//./-}-production-tls

    - <<: *https
      name: https-hs
      hostname: *hs
      tls: *tls_hs
