kubernetes/apps/kube-system/envoy-gateway/gateways/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - &internal
      name: internal
      namespace: kube-system
      sectionName: http-hs-apex
    - <<: *internal
      sectionName: http-hs

    - &external
      name: external
      namespace: kube-system
      sectionName: http-hs-apex
    - <<: *external
      sectionName: http-hs
    - <<: *external
      sectionName: http-hca-apex
    - <<: *external
      sectionName: http-hca
    - <<: *external
      sectionName: http-igi-apex
    - <<: *external
      sectionName: http-igi
    - <<: *external
      sectionName: http-lmvca-apex
    - <<: *external
      sectionName: http-lmvca
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            statusCode: 301
          type: RequestRedirect
